[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://Field.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 25.036 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.99013, 3.80012 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 114.28, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 49.8634, 58.3498 )

[node name="Game" type="Node2D"]

[node name="Ball" type="RigidBody2D" parent="."]
mass = 0.5
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
angular_damp = 0.75

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 684.014, 363.395 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 503.512, 355.166 )
rotation = 1.5708
gravity_scale = 0.0
linear_damp = 5.0
angular_damp = 5.0
script = ExtResource( 1 )

[node name="Sprite" type="Polygon2D" parent="Player"]
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 75, -167.4, 75, -163.8, 81.3, -149.5, 96, -149.5, 153, -150.5, 153, -151.2, 191.8, -158.5, 212.1, -158.5, 255, -153.3, 255, -152, 276, -146, 276, -144.7, 298, -133.7, 298, -132.4, 321, -112.4, 321, -110.2, 332, -97.2, 332, -95, 340, -82.1, 340, -78.9, 350, -50.8, 350, 50.7, 346.6, 64.5, 345.4, 64.5, 334.4, 93.5, 333.1, 93.5, 320.1, 113.5, 318.7, 113.5, 290.8, 138.5, 288.4, 138.5, 257.4, 152.5, 253.4, 152.5, 229.2, 157.5, 212, 157.5, 190, 158.5, 190, 157.4, 169, 156.4, 169, 155, 154.7, 150.5, 94.9, 150.5, 81.7, 149.6, 74.4, 168.5, 73, 168.5, 69, 173.5, 40, 173.5, 40, 170.3, 43.6, 149.5, -54.9, 149.5, -161.9, 156.5, -220, 156.5, -220, 155.3, -277, 147.2, -277, 146, -333, 132.1, -333, 130.3, -341, 122.3, -341, 120, -345, 112, -345, 107.9, -350, 80.6, -350, -81.1, -348.8, -95.5, -347.5, -95.5, -340.6, -123.5, -339, -123.5, -332, -132.5, -328.3, -132.5, -304.3, -140.5, -300.1, -140.5, -255.2, -151.5, -249.3, -151.5, -218.2, -156.5, -161.9, -156.5, -54.9, -149.5, 44, -149.5, 44, -150.5, 38.4, -172.5, 41.5, -172.5, 43.4, -173.5, 68, -173.5 )
uv = PoolVector2Array( 425, 6.1, 425, 9.7, 431.3, 24, 446, 24, 503, 23, 503, 22.3, 541.8, 15, 562.1, 15, 605, 20.2, 605, 21.5, 626, 27.5, 626, 28.8, 648, 39.8, 648, 41.1, 671, 61.1, 671, 63.3, 682, 76.3, 682, 78.5, 690, 91.4, 690, 94.6, 700, 122.7, 700, 224.2, 696.6, 238, 695.4, 238, 684.4, 267, 683.1, 267, 670.1, 287, 668.7, 287, 640.8, 312, 638.4, 312, 607.4, 326, 603.4, 326, 579.2, 331, 562, 331, 540, 332, 540, 330.9, 519, 329.9, 519, 328.5, 504.7, 324, 444.9, 324, 431.7, 323.1, 424.4, 342, 423, 342, 419, 347, 390, 347, 390, 343.8, 393.6, 323, 295.1, 323, 188.1, 330, 130, 330, 130, 328.8, 73, 320.7, 73, 319.5, 17, 305.6, 17, 303.8, 9, 295.8, 9, 293.5, 5, 285.5, 5, 281.4, 0, 254.1, 0, 92.4, 1.2, 78, 2.5, 78, 9.4, 50, 11, 50, 18, 41, 21.7, 41, 45.7, 33, 49.9, 33, 94.8, 22, 100.7, 22, 131.8, 17, 188.1, 17, 295.1, 24, 394, 24, 394, 23, 388.4, 1, 391.5, 1, 393.4, 0, 418, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79 ) ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2( -6.50977, 11.0176 )
rotation = -1.5708
scale = Vector2( 0.0427821, 0.0355058 )
polygon = PoolVector2Array( -14.0236, -7.09174, 755.452, -1.1727, 755.452, -1.1727, 754.268, -1.1727, 493.327, 181.648, 35.6964, 406.057, 35.6964, 406.057, 4.9173, -4.72412, 4.9173, -4.72412, 4.9173, -4.72412 )

[node name="Wall" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 1153.04, 359.168 )
scale = Vector2( 1, 30 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( -1014.7, -1.32983 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 1153.04, 359.168 )
scale = Vector2( 1, 30 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2( 635.184, -963.382 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Another" type="CollisionShape2D" parent="Wall3"]
position = Vector2( 1052.38, 91.0348 )
scale = Vector2( 1, 30 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Wall4" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 648.483, -963.382 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Another" type="CollisionShape2D" parent="Wall4"]
position = Vector2( 1610.69, 91.2173 )
scale = Vector2( 1, 30 )
shape = SubResource( 3 )

[node name="Field" type="Area2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field"]
position = Vector2( 645.161, 369.213 )
scale = Vector2( 50, 50 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="LGoal" type="StaticBody2D" parent="."]
position = Vector2( 11.4883, -135.913 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LGoal"]
position = Vector2( 1089.78, 450.926 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="RGoal" type="StaticBody2D" parent="."]
position = Vector2( 11.4883, -10.913 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RGoal"]
position = Vector2( 1089.78, 450.926 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="GoalDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalDetector"]
position = Vector2( 1094.61, 378.368 )
shape = SubResource( 6 )
[connection signal="body_exited" from="Field" to="Field" method="_on_Field_body_exited"]
[connection signal="body_entered" from="GoalDetector" to="Field" method="_on_GoalDetector_body_entered"]
[connection signal="body_exited" from="GoalDetector" to="Field" method="_on_GoalDetector_body_exited"]
